Fix checkbox layout in firefox
Changed fieldset legend to be position absolute.  This requires padding of the box height added to the fieldset.  This could mean if the title is too long there will be overlay over the first checkbox

--- a/assets/stylesheets/components/_checkbox.scss
+++ b/assets/stylesheets/components/_checkbox.scss
@@ -1,7 +1,7 @@
 .checkbox {
     @include size(16px);
     border: 1px solid $grey_medium;
-    border-radius: 4px;
+    border-radius: 3px;
     cursor: pointer;
     &:after {
       content: '';
